Bug#42664: Sign ignored for TIME types when not comparing as longlong

Another code-path dropped sign of TIME, presuming all time is positive.
      
Minds sign now. Patch depends on ChangeSet for 42661.


mysql-test/r/type_time.result:
  Show we now no longer ignore sign of TIME-type
  in this code-path.
mysql-test/t/type_time.test:
  Show we now no longer ignore sign of TIME-type
  in this code-path.
sql/item_cmpfunc.cc:
  TIME_to_ulonglong() (somewhat obviously) loses sign
  of its argument, so we put it back in where needed.